Fix album title alignment in .albumBox

--- a/src/assets/stylesheets/_ui-objects.scss
+++ b/src/assets/stylesheets/_ui-objects.scss
@@ -37,6 +37,7 @@ $cover-box-size: $cover-size + 5px;
         border: 1px solid $light-color;
         border-top: 0;
         height: 40px;
+        text-align: center;
     }
 }
 
